apps/manifests/env/dev/argo-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argo
  namespace: argo-cd
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.69.1.115
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-cd
  namespace: argo-cd
spec:
  parentRefs:
    - name: argo
      sectionName: http
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
