apps/manifests/env/dev/longhorn-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.69.1.114
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn
      sectionName: http
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
